[package]
name = "sample-load"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.36", features = ["derive"] }
reqwest = "0.12.15"

[dev-dependencies]
cargo-tarpaulin = "0.32.3"

